# wow_server_go

./: .bazelrc  .gitignore  BUILD.bazel  README.md  TODO.md  WORKSPACE  go.mod  go.sum  go_generate.sh  mmo_server.go  mpq_generate.sh  run.sh  testdata.go
authserver/: BUILD.bazel  auth_server.go  packets.go
authserver/packet/: BUILD.bazel  constants.go  login_challenge.go  login_challenge_test.go  login_constants.go  login_proof.go  loginerrorcode_string.go  op_code.go  opcode_string.go  realmlist.go  session.go  state.go
authserver/srp/: BUILD.bazel  srp.go  srp_test.go
common/server/: BUILD.bazel  server.go
common/session/: BUILD.bazel  packet.go  session.go
lib/config/: BUILD.bazel  character.go  config.go
server/auth/: BUILD.bazel  auth_server.go
server/auth/data/static/: BUILD.bazel  login_constants.go  op_code.go
server/auth/packet/: BUILD.bazel  login_challenge.go  login_proof.go  realmlist.go
server/auth/session/: BUILD.bazel  packets.go  session.go  state.go
server/auth/srp/: BUILD.bazel  srp.go  srp_test.go
server/world/: BUILD.bazel  README.md  world_server.go
server/world/channels/: BUILD.bazel  channels.go
server/world/data/dynamic/: BUILD.bazel  container.go  game_object.go  item.go  object_manager.go  object_utils.go  player.go  player_game_logic.go  player_handlers.go  unit.go  unit_ai.go  unit_game_logic.go
server/world/data/static/: BUILD.bazel  constants.go  item.go  starting_items.go  unit.go
server/world/game/: BUILD.bazel  stats.go
server/world/packet/: BUILD.bazel  client_attack_stop.go  client_attack_swing.go  client_auth_session.go  client_char_create.go  client_char_delete.go  client_char_enum.go  client_creature_query.go  client_item_query_single.go  client_logout_request.go  client_move.go  client_name_query.go  client_ping.go  client_player_login.go  client_query_time.go  client_set_active_mover.go  client_stand_state_change.go  client_tutorial_flag.go  client_update_account_data.go  server_account_data_times.go  server_attack_start.go  server_attack_stop.go  server_attacker_state_update.go  server_auth_challenge.go  server_auth_response.go  server_char_create.go  server_char_delete.go  server_char_enum.go  server_creature_query_response.go  server_init_world_states.go  server_item_query_single_response.go  server_login_verify_world.go  server_logout_complete.go  server_logout_response.go  server_name_query_response.go  server_pong.go  server_query_time_response.go  server_stand_state_update.go  server_tutorial_flags.go  server_update_object.go
server/world/packet/handlers/: BUILD.bazel  client_attack_stop.go  client_attack_swing.go  client_auth_session.go  client_char_create.go  client_char_delete.go  client_char_enum.go  client_creature_query.go  client_item_query_single.go  client_logout_request.go  client_move.go  client_name_query.go  client_ping.go  client_player_login.go  client_query_time.go  client_set_active_mover.go  client_stand_state_change.go  client_tutorial_flag.go  client_update_account_data.go
server/world/system/: BUILD.bazel  combat_manager.go  packet.go  session.go  state.go  updater.go
tools/dbc_utils/: BUILD.bazel  dbc_generator.py  golang_generator.py
tools/dbc_utils/dbc/: BUILD.bazel  record_fields.py
tools/dbc_utils/dbc_data/: BUILD.bazel  CharBaseInfo.json  ChrStartingLocations.json  ChrStartingStats.json
tools/new_game/: BUILD.bazel  new_game.go
tools/new_game/initial_data/: BUILD.bazel  initial_data.go
worldserver/: BUILD.bazel  README.md  packets.go  world_server.go
worldserver/data/config/: BUILD.bazel  account.go  character.go  config.go
worldserver/data/dbc/: BUILD.bazel  charbaseinfo.go  chrclasses.go  chrraces.go  chrstartinglocations.go  chrstartingstats.go  dbc.go  faction.go  gen_items_json.py  item.go  starting_items.go  starting_items.json  starting_locations.go  starting_locations.json  starting_stats.go  starting_stats.json  unit.go
worldserver/data/dbc/constants/: BUILD.bazel  autherrorcode_string.go  bonding_string.go  byte1flags_string.go  byte2flags_string.go  characterflag_string.go  charerrorcode_string.go  class_string.go  constants.go  equipmentslot_string.go  error_codes.go  foodtype_string.go  highguid_string.go  itemflag_string.go  itemsubclass_string.go  playerbytes_string.go  power_string.go  race_string.go  stat_string.go  typeid_string.go  typemask_string.go  updatefield_string.go  (+1 more)
worldserver/data/dynamic/: BUILD.bazel  container.go  game_object.go  item.go  object_manager.go  object_utils.go  player.go  player_game_logic.go  unit.go  unit_game_logic.go
worldserver/data/object/: BUILD.bazel  container.go  game_object.go  guid.go  item.go  location.go  manager.go  movement_info.go  object.go  player.go  player_game_logic.go  unit.go  unit_game_logic.go  utils.go
worldserver/data/static/: BUILD.bazel  constants.go  error_codes.go  item.go  op_code.go  starting_items.go
worldserver/data/world/: BUILD.bazel  world_config.go
worldserver/objects/: container.go  item.go  object.go  object_manager.go  player.go  unit.go  unit_logic.go  utils.go
worldserver/packet/: BUILD.bazel  account_data_times.go  auth_challenge.go  auth_constants.go  auth_response.go  auth_session.go  autherrorcode_string.go  char_constants.go  char_create.go  char_delete.go  char_enum.go  charerrorcode_string.go  client_attack_swing.go  client_auth_session.go  client_char_create.go  client_char_delete.go  client_char_enum.go  client_creature_query.go  client_item_query_single.go  client_logout_request.go  client_move.go  client_name_query.go  client_ping.go  client_player_login.go  client_query_time.go  client_set_active_mover.go  client_stand_state_change.go  client_tutorial_flag.go  client_update_account_data.go  init_world_states.go  login_verify_world.go  op_code.go  opcode_string.go  packet.go  ping.go  player_login.go  pong.go  server_account_data_times.go  server_attack_start.go  server_attacker_state_update.go  (+20 more)
worldserver/system/: BUILD.bazel  combat_manager.go  object_manager.go  op_code.go  opcode_string.go  packet.go  session.go  state.go  updater.go
(+124 files in other folders)
