load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "authserver",
    srcs = [
        "auth_server.go",
        "packets.go",
    ],
    importpath = "github.com/jeshuamorrissey/wow_server_go/authserver",
    visibility = ["//visibility:public"],
    deps = [
        "//authserver/packet",
        "//common",
        "//common/server",
        "//common/session",
        "//worldserver/data/config",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
