load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "worldserver",
    srcs = [
        "packets.go",
        "world_server.go",
    ],
    importpath = "github.com/jeshuamorrissey/wow_server_go/worldserver",
    visibility = ["//visibility:public"],
    deps = [
        "//worldserver/data/dbc/constants",
        "//worldserver/data/object",
        "//worldserver/data/world",
        "//worldserver/packet",
        "//worldserver/system",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
