load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "session",
    srcs = [
        "packet.go",
        "session.go",
    ],
    importpath = "github.com/jeshuamorrissey/wow_server_go/common/session",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//worldserver/data/config",
        "//worldserver/data/dynamic/interfaces",
        "//worldserver/data/static",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
