load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "account.go",
        "character.go",
        "config.go",
    ],
    importpath = "github.com/jeshuamorrissey/wow_server_go/lib/config",
    visibility = ["//visibility:public"],
    deps = [
        "//server/auth/srp",
        "//server/world/data/dynamic",
        "//server/world/data/dynamic/interfaces",
    ],
)
