load("@io_bazel_rules_go//go:def.bzl", "go_library")

genrule(
    name = "opcode_to_handler",
    srcs = ["//server/world/packet:packet_srcs"],
    outs = ["opcode_to_handler.go"],
    cmd = "$(location //tools/gen_opcode_to_handler) --package_path=./server/world/packet > $@",
    tools = ["//tools/gen_opcode_to_handler"],
)

go_library(
    name = "world",
    srcs = [
        "opcode_to_handler.go",
        "world_server.go",
    ],
    importpath = "github.com/jeshuamorrissey/wow_server_go/server/world",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/config",
        "//server/world/data/dynamic/interfaces",
        "//server/world/data/static",
        "//server/world/packet",
        "//server/world/packet/handlers",
        "//server/world/system",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
