load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "packet",
    srcs = [
        "login_challenge.go",
        "login_proof.go",
        "realmlist.go",
    ],
    importpath = "github.com/jeshuamorrissey/wow_server_go/server/auth/packet",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/util",
        "//server/auth/data/static",
        "//server/auth/session",
        "//server/auth/srp",
    ],
)
