load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "packet_srcs",
    srcs = glob(["*.go"]),
    visibility = ["//visibility:public"],
)

go_library(
    name = "packet",
    srcs = [
        "client_attack_stop.go",
        "client_attack_swing.go",
        "client_auth_session.go",
        "client_char_create.go",
        "client_char_delete.go",
        "client_char_enum.go",
        "client_creature_query.go",
        "client_item_query_single.go",
        "client_logout_request.go",
        "client_move.go",
        "client_name_query.go",
        "client_ping.go",
        "client_player_login.go",
        "client_query_time.go",
        "client_set_active_mover.go",
        "client_stand_state_change.go",
        "client_tutorial_flag.go",
        "client_update_account_data.go",
        "server_account_data_times.go",
        "server_attack_start.go",
        "server_attack_stop.go",
        "server_attacker_state_update.go",
        "server_auth_challenge.go",
        "server_auth_response.go",
        "server_char_create.go",
        "server_char_delete.go",
        "server_char_enum.go",
        "server_creature_query_response.go",
        "server_init_world_states.go",
        "server_item_query_single_response.go",
        "server_login_verify_world.go",
        "server_logout_complete.go",
        "server_logout_response.go",
        "server_name_query_response.go",
        "server_pong.go",
        "server_query_time_response.go",
        "server_stand_state_update.go",
        "server_tutorial_flags.go",
        "server_update_object.go",
    ],
    importpath = "github.com/jeshuamorrissey/wow_server_go/server/world/packet",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/config",
        "//lib/util",
        "//server/world/data/dynamic",
        "//server/world/data/dynamic/interfaces",
        "//server/world/data/static",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
