load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "system",
    srcs = [
        "combat_manager.go",
        "packet.go",
        "session.go",
        "state.go",
        "updater.go",
    ],
    importpath = "github.com/jeshuamorrissey/wow_server_go/server/world/system",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/config",
        "//lib/util",
        "//server/world/data/dynamic",
        "//server/world/data/dynamic/interfaces",
        "//server/world/data/static",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
