load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "initial_data",
    srcs = ["initial_data.go"],
    importpath = "github.com/jeshuamorrissey/wow_server_go/tools/new_game/initial_data",
    visibility = ["//visibility:public"],
    deps = [
        "//worldserver/data/config",
        "//worldserver/data/dynamic",
        "//worldserver/data/dynamic/interfaces",
        "//worldserver/data/static",
    ],
)
