load("@io_bazel_rules_go//go:def.bzl", "go_library")

genrule(
    name = "dbc_data",
    srcs = ["//dbc_utils/dbc_data"],
    outs = ["dbc_data.go"],
    cmd = "$(location //dbc_utils:golang_generator) --output_file=$@ $(locations //dbc_utils/dbc_data)",
    tools = ["//dbc_utils:golang_generator"],
)

go_library(
    name = "dbc",
    srcs = [
        "dbc_data.go",
        "item.go",
        "starting_items.go",
        "unit.go",
    ],
    importpath = "github.com/jeshuamorrissey/wow_server_go/worldserver/data/dbc",
    visibility = ["//visibility:public"],
    deps = ["//worldserver/data/dbc/constants"],
)
