load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "object",
    srcs = [
        "container.go",
        "game_object.go",
        "guid.go",
        "item.go",
        "location.go",
        "manager.go",
        "movement_info.go",
        "object.go",
        "player.go",
        "player_game_logic.go",
        "unit.go",
        "unit_game_logic.go",
        "utils.go",
    ],
    importpath = "github.com/jeshuamorrissey/wow_server_go/worldserver/data/object",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//worldserver/data/dbc",
        "//worldserver/data/dbc/constants",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
