load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "constants",
    srcs = [
        "autherrorcode_string.go",
        "bagfamily_string.go",
        "bonding_string.go",
        "byte1flags_string.go",
        "byte2flags_string.go",
        "characterflag_string.go",
        "charerrorcode_string.go",
        "constants.go",
        "equipmentslot_string.go",
        "error_codes.go",
        "foodtype_string.go",
        "gender_string.go",
        "highguid_string.go",
        "inventorytype_string.go",
        "itemclass_string.go",
        "itemflag_string.go",
        "itemquality_string.go",
        "itemsubclass_string.go",
        "language_string.go",
        "playerbytes_string.go",
        "playerflag_string.go",
        "power_string.go",
        "sheathtype_string.go",
        "spellcategory_string.go",
        "spellschool_string.go",
        "standstate_string.go",
        "stat_string.go",
        "team_string.go",
        "typeid_string.go",
        "typemask_string.go",
        "updatefield_string.go",
        "updateflags_string.go",
        "updatetype_string.go",
    ],
    importpath = "github.com/jeshuamorrissey/wow_server_go/worldserver/data/dbc/constants",
    visibility = ["//visibility:public"],
)
