load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "initial_data",
    srcs = ["initial_data.go"],
    importpath = "github.com/jeshuamorrissey/wow_server_go/worldserver/data/world/initial_data",
    visibility = ["//visibility:public"],
    deps = [
        "//worldserver/data/dbc",
        "//worldserver/data/dbc/constants",
        "//worldserver/data/object",
        "//worldserver/data/world",
    ],
)
